--- a/style.css
+++ b/style.css
@@ -43,45 +43,25 @@ body {
 }
 
 main {
-    padding: 3rem;
+    padding: 0 3rem;
 }
 
 .testimonial {
 
-    -webkit-animation-name: pulse;
-    animation-name: pulse;
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
     }
-    @-webkit-keyframes pulse {
-    0% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
+    @-webkit-keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
     }
-    50% {
-    -webkit-transform: scale3d(1.05, 1.05, 1.05);
-    transform: scale3d(1.05, 1.05, 1.05);
-    }
-    100% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-    }
-    }
-    @keyframes pulse {
-    0% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-    }
-    50% {
-    -webkit-transform: scale3d(1.05, 1.05, 1.05);
-    transform: scale3d(1.05, 1.05, 1.05);
-    }
-    100% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-    }
+    @keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 } 
 
 .testimonial-img-container {
@@ -241,8 +221,6 @@ main {
 
     .quotes-pattern {
         display: initial;
-        filter: brightness(2);
-        filter: saturate(2);
         align-self: baseline;
         margin-left: 3rem;
     }
@@ -269,8 +247,6 @@ main {
     .testimonial-name-container span {
         font-size: 1rem;
     }
-
-
 
     .hidden {
         display: none;
